--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,10 @@ jobs:
           cd webapp
           yarn install
 
-      # Stap 4: Lint de code
+      # Stap 4: Lint de code met flat-config
       - name: Lint de code
+        env:
+          ESLINT_USE_FLAT_CONFIG: true
         run: |
           cd webapp
           yarn lint
