--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
----
 name: Build and test
 on:
   push:
@@ -7,6 +6,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ESLINT_USE_FLAT_CONFIG: true  # Omgevingsvariabele instellen
 
     steps:
       # Stap 1: Check de repository-code uit
@@ -24,22 +25,10 @@ jobs:
         run: |
           cd webapp
           yarn install
-      
-      - name: Clear Yarn cache
-        run: |
-          cd webapp
-          yarn cache clean
-
 
       # Stap 4: Lint de code met flat-config
       - name: Lint de code
         run: |
           cd webapp
-          export ESLINT_USE_FLAT_CONFIG=true
-          yarn lint
-      - name: Show ESLint version and configuration
-        run: |
-          cd webapp
-          yarn eslint --version
-          yarn eslint --print-config . | cat
+          yarn lint  # De omgevingsvariabele is automatisch beschikbaar
 
