--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,12 @@ jobs:
         run: |
           cd webapp
           yarn lint
+      
+     # Stap 5: Build het Docker image
+      - name: Build Docker image
+        uses: docker/build-push-action@v4  # Vervang met de laatste versie indien nodig
+        with:
+          context: .  # Context is de root van de repository
+          file: Dockerfile  # Het Dockerfile in de root
+          tags: jonas12janssens/webapp:latest  # Vervang met je Docker Hub username
+          push: false  # We willen het image nog niet pushen
