--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v4  # Vervang met de laatste versie indien nodig
         with:
-          context: .  # Context is de root van de repository
+          context: webapp  # Context is de root van de repository
           file: webapp/dockerfile  # Het Dockerfile in de root
           tags: jonas12janssens/webapp:latest  # Vervang met je Docker Hub username
           push: false  # We willen het image nog niet pushen
