--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,13 @@ jobs:
         run: |
           cd webapp
           yarn install
-          
-       
 
+      # Stap 4: Voer tests uit
+      - name: Run tests
+        run: |
+          cd webapp
+          yarn test
+          
       # Stap 5: Lint de code met de nieuwe configuratie
       - name: Lint de code
         env:
@@ -34,18 +38,19 @@ jobs:
           cd webapp
           yarn lint
 
-      # Stap 5: Log in op Docker Hub
+      # Stap 6: Log in op Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}  # Gebruik de secret
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      
-     # Stap 5: Build het Docker image
+
+      # Stap 7: Build en push Docker image
       - name: Build Docker image
-        uses: docker/build-push-action@v4  # Vervang met de laatste versie indien nodig
+        uses: docker/build-push-action@v4
         with:
-          context: webapp  # Context is de root van de repository
-          file: webapp/dockerfile  # Het Dockerfile in de root
-          tags: jonas12janssens/webapp:latest  # Vervang met je Docker Hub username
-          push: true  # We willen het image nog niet pushen
+          context: webapp  # De context is de map waar de Dockerfile zich bevindt
+          file: webapp/dockerfile  # Pad naar het Dockerfile
+          tags: jonas12janssens/webapp:latest  # Docker Hub image naam
+          push: true  # Image wordt gepusht naar Docker Hub
+
