--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and test
+name: Build, test, and push
 on:
   push:
     branches:
@@ -24,13 +24,23 @@ jobs:
           cd webapp
           yarn install
 
-      # Stap 4: Voer tests uit
+      # Stap 4: Start de server in de achtergrond
+      - name: Start the server
+        run: |
+          cd webapp
+          nohup yarn start &
+
+      # Stap 5: Wacht tot de server beschikbaar is
+      - name: Wait for server to be ready
+        run: sleep 5
+
+      # Stap 6: Voer tests uit
       - name: Run tests
         run: |
           cd webapp
           yarn test
-          
-      # Stap 5: Lint de code met de nieuwe configuratie
+
+      # Stap 7: Lint de code
       - name: Lint de code
         env:
           ESLINT_USE_FLAT_CONFIG: false
@@ -38,19 +48,19 @@ jobs:
           cd webapp
           yarn lint
 
-      # Stap 6: Log in op Docker Hub
+      # Stap 8: Log in op Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}  # Gebruik de secret
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # Stap 7: Build en push Docker image
+      # Stap 9: Build en push Docker image
       - name: Build Docker image
         uses: docker/build-push-action@v4
         with:
-          context: webapp  # De context is de map waar de Dockerfile zich bevindt
-          file: webapp/dockerfile  # Pad naar het Dockerfile
-          tags: jonas12janssens/webapp:latest  # Docker Hub image naam
-          push: true  # Image wordt gepusht naar Docker Hub
+          context: webapp
+          file: webapp/dockerfile
+          tags: jonas12janssens/webapp:latest
+          push: true
 
